feat(predict): piggy back value
